# -cloud-red-team-arena

./: .gitignore  Dockerfile  README.md  client.py  fix_corruptions.py  inference.py  openenv.yaml  pyproject.toml  test_api.py  test_client.py
server/: abstractions.py  app.py  environment.py  grader.py  models.py  scenarios.py  ui.html
tests/: test_comprehensive.py
